fix contact box breaking on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -277,7 +277,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 75vh;
+    min-height: 75vh;
     border: 1px solid white;
     border-radius: 25px;
 }
@@ -312,4 +312,11 @@ a {
     text-align: center;
     text-decoration: none;
     color: white;
+}
+
+@media (max-width:400px){
+    .store-container {
+        display: flex;
+        flex-direction: column;
+    }
 }
